<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_below="@+id/toolbar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:layout_marginStart="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ktj_text"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/train" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:layout_marginStart="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ktj_text2"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_buy_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Купить билет"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ktj_text3"
            android:layout_marginTop="25dp"/>
    </LinearLayout>
</RelativeLayout>